[package]
name = "bsp_rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Valve BSP loader"
homepage = "https://github.com/DotWith/goldsrc_formats/"
documentation = "https://docs.rs/bsp_rs"
repository = "https://github.com/DotWith/goldsrc_formats/"
keywords = ["valve"]

[dependencies]
binrw = "0.12.0"
image = { version = "0.24.7", default-features = false, features = ["tga"] }
com_goldsrc_formats = { version = "0.1.0", path = "../com_goldsrc_formats" }

[[example]]
name = "bsp"
path = "examples/bsp.rs"
