[package]
name = "wad_rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Valve WAD loader"
homepage = "https://github.com/DotWith/goldsrc_formats/"
documentation = "https://docs.rs/wad_rs"
repository = "https://github.com/DotWith/goldsrc_formats/"
keywords = ["valve"]

[dependencies]
binrw = "0.12.0"
com_goldsrc_formats = { version = "0.1.0", path = "../com_goldsrc_formats" }
